--- a/app/src/main/res/layout/activity_androidlarge.xml
+++ b/app/src/main/res/layout/activity_androidlarge.xml
@@ -1,26 +1,26 @@
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent" android:layout_height="wrap_content" >
-	<!-- 
+	<!--
 	/*
 	 *	This content is generated from the API File Info.
 	 *	(Alt+Shift+Ctrl+I).
 	 *
-	 *	@desc 		
+	 *	@desc
 	 *	@file 		android_large___1
-	 *	@date 		Wednesday 04th of October 2023 08:28:03 AM
+	 *	@date 		Friday 06th of October 2023 11:24:10 AM
 	 *	@title 		Page 1
-	 *	@author 	
-	 *	@keywords 	
+	 *	@author
+	 *	@keywords
 	 *	@generator 	Export Kit v1.3.figma
 	 *
 	 */
 	-->
-	<ScrollView android:id="@+id/androidlarge"
-		android:layout_width="wrap_content" 
+	<ScrollView android:id="@+id/android_large___1"
+		android:layout_width="wrap_content"
 		android:layout_height="match_parent" >
 
-		<RelativeLayout android:id="@+id/content_container" 
-			android:layout_width="wrap_content" 
+		<RelativeLayout android:id="@+id/content_container"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" >
 
 
@@ -34,159 +34,152 @@
 
 				<View   android:id="@+id/_bg__android_large___1_ek2"
 					android:background="@drawable/_bg__android_large___1_ek2_shape"
-					 android:layout_marginStart="0dp"
+					android:layout_marginStart="0dp"
 					android:layout_marginTop="0dp"
-					android:layout_width="360dp"
+					android:layout_width="369dp"
 					android:layout_height="800dp" />
 
 
 				<RelativeLayout android:id="@+id/bg_img1_1"
-					android:layout_marginTop="-5dp"
-					android:layout_marginStart="-6dp"
+					android:layout_marginTop="0dp"
+					android:layout_marginStart="0dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					>
 
 					<View   android:id="@+id/_bg__bg_img1_1_ek1"
 						android:background="@drawable/_bg__bg_img1_1_ek1_shape"
-						 android:layout_marginStart="0dp"
+						android:layout_marginStart="0dp"
 						android:layout_marginTop="0dp"
 						android:layout_width="369dp"
-						android:layout_height="584dp" />
+						android:layout_height="800dp" />
 
 
 					<ImageView
 						android:id="@+id/mask_group"
-						android:layout_width="match_parent"
-						android:layout_height="573dp"
+						android:layout_width="369dp"
+						android:layout_height="800dp"
 						android:layout_marginStart="0dp"
 						android:layout_marginTop="0dp"
 						android:contentDescription="mask_group"
 						android:src="@drawable/mask_group" />
 
 					<RelativeLayout android:id="@+id/frame_4"
-						android:layout_marginTop="364.44dp"
+						android:layout_marginTop="499.23dp"
 						android:layout_marginStart="48.17dp"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						>
 
 
-						<RelativeLayout
-							android:id="@+id/frame_5"
-							android:layout_width="wrap_content"
-							android:layout_height="104px"
+						<RelativeLayout android:id="@+id/frame_5"
+							android:layout_marginTop="7.56dp"
 							android:layout_marginStart="54.82dp"
-							android:layout_marginTop="7.56dp">
+							android:layout_width="wrap_content"
+							android:layout_height="wrap_content"
+							>
 
 
-							<RelativeLayout
-								android:id="@+id/rectangle_2"
+							<RelativeLayout android:id="@+id/rectangle_2"
+								android:layout_marginTop="7dp"
+								android:layout_marginStart="22dp"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
-								android:layout_marginStart="22dp"
-								android:layout_marginTop="7dp">
+								>
 
-								<View
-									android:id="@+id/_bg__rectangle_2"
-									android:layout_width="30dp"
-									android:layout_height="9dp"
+								<View   android:id="@+id/_bg__rectangle_2"
+									android:background="@drawable/_bg__rectangle_2_shape"
 									android:layout_marginStart="0dp"
 									android:layout_marginTop="0dp"
-									android:background="@drawable/_bg__rectangle_2_shape" />
-
-								<View
-									android:id="@+id/rectangle_2_ek4"
 									android:layout_width="30dp"
-									android:layout_height="9dp"
+									android:layout_height="9dp" />
+
+								<View   android:id="@+id/rectangle_2_ek4"
+									android:background="@drawable/rectangle_2_ek4_shape"
 									android:layout_marginStart="0dp"
 									android:layout_marginTop="0dp"
-									android:background="@drawable/rectangle_2_ek4_shape" />
+									android:layout_width="30dp"
+									android:layout_height="9dp" />
 
 							</RelativeLayout>
 
 
-							<RelativeLayout
-								android:id="@+id/rectangle_3"
+							<RelativeLayout android:id="@+id/rectangle_3"
+								android:layout_marginTop="7dp"
+								android:layout_marginStart="59dp"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
-								android:layout_marginStart="59dp"
-								android:layout_marginTop="7dp">
+								>
 
-								<View
-									android:id="@+id/_bg__rectangle_3"
-									android:layout_width="30dp"
-									android:layout_height="9dp"
+								<View   android:id="@+id/_bg__rectangle_3"
+									android:background="@drawable/_bg__rectangle_3_shape"
 									android:layout_marginStart="0dp"
 									android:layout_marginTop="0dp"
-									android:background="@drawable/mask_group" />
+									android:layout_width="30dp"
+									android:layout_height="9dp" />
 
 
-								<RelativeLayout
-									android:id="@+id/rectangle_2_ek5"
+								<RelativeLayout android:id="@+id/rectangle_2_ek5"
+									android:layout_marginTop="0dp"
+									android:layout_marginStart="0dp"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:layout_marginStart="0dp"
-									android:layout_marginTop="0dp">
+									>
 
-									<View
-										android:id="@+id/_bg__rectangle_2_ek6"
-										android:layout_width="30dp"
-										android:layout_height="9dp"
+									<View   android:id="@+id/_bg__rectangle_2_ek6"
+										android:background="@drawable/_bg__rectangle_2_ek6_shape"
 										android:layout_marginStart="0dp"
 										android:layout_marginTop="0dp"
-										android:background="@drawable/mask_group" />
-
-									<View
-										android:id="@+id/rectangle_2_ek7"
 										android:layout_width="30dp"
-										android:layout_height="9dp"
+										android:layout_height="9dp" />
+
+									<View   android:id="@+id/rectangle_2_ek7"
+										android:background="@drawable/rectangle_2_ek7_shape"
 										android:layout_marginStart="0dp"
 										android:layout_marginTop="0dp"
-										android:background="@drawable/rectangle_2_ek7_shape" />
+										android:layout_width="30dp"
+										android:layout_height="9dp" />
 
 								</RelativeLayout>
 
 							</RelativeLayout>
 
 
-							<RelativeLayout
-								android:id="@+id/rectangle_4"
+							<RelativeLayout android:id="@+id/rectangle_4"
+								android:layout_marginTop="7dp"
+								android:layout_marginStart="96dp"
 								android:layout_width="wrap_content"
 								android:layout_height="wrap_content"
-								android:layout_marginStart="96dp"
-								android:layout_marginTop="7dp">
+								>
 
-								<View
-									android:id="@+id/_bg__rectangle_4"
-									android:layout_width="30dp"
-									android:layout_height="9dp"
+								<View   android:id="@+id/_bg__rectangle_4"
+									android:background="@drawable/_bg__rectangle_4_shape"
+									android:layout_marginStart="0dp"
 									android:layout_marginTop="0dp"
-									android:background="@drawable/mask_group" />
+									android:layout_width="30dp"
+									android:layout_height="9dp" />
 
 
-								<RelativeLayout
-									android:id="@+id/rectangle_4_ek4"
+								<RelativeLayout android:id="@+id/rectangle_4_ek4"
+									android:layout_marginTop="0dp"
+									android:layout_marginStart="0dp"
 									android:layout_width="wrap_content"
 									android:layout_height="wrap_content"
-									android:layout_marginStart="0dp"
-									android:layout_marginTop="0dp">
+									>
 
-									<View
-										android:id="@+id/_bg__rectangle_4_ek5"
-										android:layout_width="30dp"
-										android:layout_height="9dp"
+									<View   android:id="@+id/_bg__rectangle_4_ek5"
+										android:background="@drawable/mask_group"
 										android:layout_marginStart="0dp"
 										android:layout_marginTop="0dp"
-										android:background="@drawable/mask_group" />
-
-									<View
-										android:id="@+id/rectangle_2_ek8"
 										android:layout_width="30dp"
-										android:layout_height="9dp"
+										android:layout_height="9dp" />
+
+									<View   android:id="@+id/rectangle_2_ek8"
+										android:background="@drawable/rectangle_2_ek8_shape"
 										android:layout_marginStart="0dp"
 										android:layout_marginTop="0dp"
-										android:background="@drawable/rectangle_2_ek8_shape" />
+										android:layout_width="30dp"
+										android:layout_height="9dp" />
 
 								</RelativeLayout>
 
@@ -196,42 +189,73 @@
 
 					</RelativeLayout>
 
-				</RelativeLayout>
+
+					<RelativeLayout android:id="@+id/frame_2"
+						android:layout_marginTop="576.72dp"
+						android:layout_marginStart="-2dp"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						>
+
+						<View   android:id="@+id/_bg__frame_2_ek1"
+							android:background="@drawable/_bg__frame_2_ek1_shape"
+							android:layout_marginStart="0dp"
+							android:layout_marginTop="0dp"
+							android:layout_width="374dp"
+							android:layout_height="529.66dp" />
+
+						<ImageView
+							android:id="@+id/frame_3"
+							android:layout_width="360dp"
+							android:layout_height="299dp"
+							android:layout_marginStart="0dp"
+							android:layout_marginTop="0dp"
+							android:contentDescription="frame_3"
+							android:src="@drawable/frame_3" />
+
+						<TextView android:id="@+id/we_understand_being_a_farmer_is_not_easy"
+							android:textStyle="bold"
+							android:textSize="24sp"
+							android:textColor="@color/_bg__android_large___1_ek2_color"
+							android:layout_marginLeft="15dp"
+							android:layout_marginTop="12.07dp"
+							android:layout_width="351.4dp"
+							android:layout_height="57.4dp"
+							android:text="@string/we_understand_being_a_farmer_is_not_easy_string"
+							/>
+
+						<Button
+							android:id="@+id/getStartedButton"
+							android:layout_width="328dp"
+							android:layout_height="50dp"
+							android:layout_below="@+id/we_understand_being_a_farmer_is_not_easy"
+							android:layout_centerHorizontal="true"
+
+							android:layout_marginTop="44dp"
+							android:background="@drawable/button_bg_get_started"
+							android:text="Get started"
+							android:textColor="@color/_bg__frame_2_ek1_color"
+							android:textStyle="bold" />
+
+						<!-- "Skip" button -->
+
+						<Button
+							android:id="@+id/skipButton"
+							android:layout_width="wrap_content"
+							android:layout_height="34dp"
+							android:layout_below="@id/getStartedButton"
+							android:layout_marginStart="105dp"
+							android:layout_marginLeft="130dp"
+							android:layout_marginTop="14dp"
+							android:layout_marginEnd="105dp"
+							android:layout_marginBottom="105dp"
+							android:textColor="@color/_bg__android_large___1_ek2_color"
+							android:textStyle="bold"
+							android:text="Skip"
+							android:background="@drawable/button_bg_skip"/>
 
 
-				<RelativeLayout android:id="@+id/frame_2"
-					android:layout_marginTop="413dp"
-					android:layout_marginStart="-3dp"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					>
-
-					<View   android:id="@+id/_bg__frame_2_ek1"
-						android:background="@drawable/_bg__frame_2_ek1_shape"
-						 android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:layout_width="366dp"
-						android:layout_height="381dp" />
-
-					<TextView android:id="@+id/we_understand_being_a_farmer_is_not_easy"
-						android:textStyle="bold"
-						android:textSize="24sp"
-						android:textColor="@color/_bg__android_large___1_ek2_color"
-						android:layout_marginLeft="14dp"
-						android:layout_marginTop="20dp"
-						android:layout_width="351.4dp"
-						android:layout_height="57.4dp"
-						android:text="@string/we_understand_being_a_farmer_is_not_easy_string"
-						 />
-
-					<ImageView
-						android:id="@+id/frame_3"
-						android:layout_width="360dp"
-						android:layout_height="299dp"
-						android:layout_marginStart="0dp"
-						android:layout_marginTop="0dp"
-						android:contentDescription="frame_3"
-						android:src="@drawable/frame_3" />
+					</RelativeLayout>
 
 				</RelativeLayout>
 
