--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,12 +10,58 @@
 	<color name="teal_700">#FF018786</color>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+	<color name="_bg__onboarding_3_ek2_color">#FFFFFF</color>
+	<color name="_bg__bg_img3_ek1_color">#000000</color>
+	<color name="rectangle_23_color">#ffffff</color>
+	<color name="rectangle_24_color">#D9D9D9</color>
+	<color name="rectangle_20_color">#085B53</color>
 
+	<color name="_bg__onboarding_4_ek2_color">#FFFFFF</color>
+	<color name="_bg__headergroup__avoid_making_changes__ek1_color">#000000</color>
+	<color name="_bg__notificationbar_ek1_color">#054D47</color>
+	<color name="_bg__header_ek1_color">#085B53</color>
+	<color name="ellipse_1_color">#F4F4F4</color>
+	<color name="upload_your_picture_color">#3D3D3D</color>
+
+	<color name="_bg__onboarding_5_ek2_color">#FFFFFF</color>
+	<color name="_bg__screen_1_ek2_color">#FFFFFF</color>
+
+
+	<color name="_bg__group_174_ek1_color">#000000</color>
+
+	<color name="_bg__headergroup__avoid_making_changes__ek2_color">#000000</color>
+
+	<color name="_1_42_color">#FFFFFF</color>
+
+	<color name="_bg__frame_53_ek2_color">#000000</color>
+	<color name="most_asked_water_questions_color">#3E3E3E</color>
+	<color name="_bg__frame_44_ek1_color">#EEEEEE</color>
+	<color name="what_is_sprinkler_irrigation_system__color">#3D3D3D</color>
+
+	<color name="_bg__screen_7_ek2_color">#FFFFFF</color>
+	<color name="_bg__group_171_ek1_color">#000000</color>
+
+	<color name="do_you_like_it__color">#57646E</color>
+
+	<color name="_bg__screen_9_ek2_color">#FFFFFF</color>
+	<color name="_bg___2__outlined_b__activated_ek1_color">#000000</color>
+
+
+	<color name="_bg__screen_8_ek2_color">#FFFFFF</color>
+
+	<color name="_bg__wrapper_ek1_color">#000000</color>
+	<color name="search_previous_questions_color">#ADB5BD</color>
+
+	<color name="what_are_the_government_schemes_for_farme____color">#0F1828</color>
 	<color name="_bg__android_large___1_ek2_color">#FFFFFF</color>
 	<color name="_bg__bg_img1_1_ek1_color">#000000</color>
 	<color name="rectangle_2_ek4_color">#085B53</color>
 	<color name="rectangle_2_ek7_color">#D9D9D9</color>
 	<color name="_bg__bg_img2_1_ek2_color">#000000</color>
 	<color name="_bg__frame_2_ek1_color">#085B53</color>
+
+
+	<color name="_bg__screen_11_ek2_color">#FFFFFF</color>
+
 	<color name="know_all_the_government_schemes_available_color">#FFFFFF</color>
 </resources>
